force-app/main/default/objects/Contact/fields/Period_Information__c.field-meta.xml
<CustomField>
    <fullName>Period_Information__c</fullName>
    <description>Defined as beginning every (21-35 Days)</description>
    <label>Period Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>