force-app/main/default/objects/Contact/fields/Period_Regularity_and_Length__c.field-meta.xml
<CustomField>
    <fullName>Period_Regularity_and_Length__c</fullName>
    <label>Period Regularity and Length</label>
    <length>50</length>
    <type>Text</type>
</CustomField>