force-app/main/default/objects/Contact/fields/Pregnancies_of_20_weeks_or_more__c.field-meta.xml
<CustomField>
    <fullName>Pregnancies_of_20_weeks_or_more__c</fullName>
    <description>Determine if the female patient has previously had any pregnancies of 20 weeks or more gestation regardless if by fertility treatment or with a different partner.</description>
    <label>Pregnancies of 20 weeks or more</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>