force-app/main/default/objects/Contact/fields/Prev_Clinics_and_years_of_treatment__c.field-meta.xml
<CustomField>
    <fullName>Prev_Clinics_and_years_of_treatment__c</fullName>
    <label>Prev. Clinics and years of treatment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>