force-app/main/default/objects/Contact/fields/Private_Health_Fund__c.field-meta.xml
<CustomField>
    <fullName>Private_Health_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Health Fund</label>
    <type>Checkbox</type>
</CustomField>