force-app/main/default/objects/Contact/fields/Private_Health_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Private_Health_Fund_Name__c</fullName>
    <label>Private Health Fund Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>