force-app/main/default/objects/Contact/fields/Private_Health_Fund_Number__c.field-meta.xml
<CustomField>
    <fullName>Private_Health_Fund_Number__c</fullName>
    <label>Private Health Fund Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>