force-app/main/default/objects/Contact/fields/Record_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_Text__c</fullName>
    <label>Record_ID_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>