force-app/main/default/objects/Contact/fields/Result_Types_Allowed_From_Patient_Record__c.field-meta.xml
<CustomField>
    <fullName>Result_Types_Allowed_From_Patient_Record__c</fullName>
    <label>Result Types Allowed From Patient Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infectious Screens</fullName>
            </value>
            <value>
                <fullName>PGT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>