force-app/main/default/objects/Contact/fields/RIMS_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>RIMS_Patient_ID__c</fullName>
    <label>RIMS Patient ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>