force-app/main/default/objects/Contact/fields/Screening_Bloods__c.field-meta.xml
<CustomField>
    <fullName>Screening_Bloods__c</fullName>
    <label>Screening Bloods Valid Until</label>
    <type>Date</type>
</CustomField>