force-app/main/default/objects/Contact/fields/Semen_Straws__c.field-meta.xml
<CustomField>
    <fullName>Semen_Straws__c</fullName>
    <label>Semen Straws</label>
    <summarizedField>Sperm_Sample__c.Number_of_Straws_Frozen__c</summarizedField>
    <summaryForeignKey>Sperm_Sample__c.Donor_Owner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>