force-app/main/default/objects/Contact/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <formula>TEXT(Sex_at_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sex</label>
    <type>Text</type>
</CustomField>