force-app/main/default/objects/Contact/fields/Smoking_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Per_Day__c</fullName>
    <label>Smoking Per Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>