force-app/main/default/objects/Contact/fields/Storage_Consent__c.field-meta.xml
<CustomField>
    <fullName>Storage_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storage Consent</label>
    <type>Checkbox</type>
</CustomField>