force-app/main/default/objects/Contact/fields/sumoapp__VoiceOptOut__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__VoiceOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Reminder Opt Out</label>
    <type>Checkbox</type>
</CustomField>