force-app/main/default/objects/Contact/fields/Total_Eggs_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Eggs_Available__c</fullName>
    <label>Total Eggs Available</label>
    <summarizedField>Egg_Sample__c.Eggs_Currently_Frozen__c</summarizedField>
    <summaryForeignKey>Egg_Sample__c.Donor_Owner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>