force-app/main/default/objects/Contact/fields/Types_of_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Cancer__c</fullName>
    <label>Types of Cancer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>