force-app/main/default/objects/Contact/fields/Undergone_Treatment_At__c.field-meta.xml
<CustomField>
    <fullName>Undergone_Treatment_At__c</fullName>
    <label>Undergone Treatment At Other Clinics?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>