force-app/main/default/objects/Contact/fields/Upcoming_Blood_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Blood_Test_Type__c</fullName>
    <label>Upcoming Blood Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LH, E2, P4</fullName>
            </value>
            <value>
                <fullName>HCG, P4</fullName>
            </value>
            <value>
                <fullName>E2 P4 LH BHCG</fullName>
            </value>
            <value>
                <fullName>E2 P4 LH FSH</fullName>
            </value>
            <value>
                <fullName>P4 only</fullName>
            </value>
            <value>
                <fullName>Other Combination of Bloods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>