force-app/main/default/objects/Contact/fields/Vasectomy__c.field-meta.xml
<CustomField>
    <fullName>Vasectomy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vasectomy</label>
    <type>Checkbox</type>
</CustomField>