force-app/main/default/objects/Contact/fields/Vasectomy_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Vasectomy_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vasectomy Reversal?</label>
    <type>Checkbox</type>
</CustomField>