force-app/main/default/objects/Contact/fields/Vasectomy_Year__c.field-meta.xml
<CustomField>
    <fullName>Vasectomy_Year__c</fullName>
    <label>Vasectomy Year</label>
    <type>Date</type>
</CustomField>