force-app/main/default/objects/Contact/fields/Weight_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Weight_as_Text__c</fullName>
    <label>Weight as Text</label>
    <length>3</length>
    <type>Text</type>
</CustomField>