force-app/main/default/objects/Contact/fields/Which_Male_Infertility_Factors__c.field-meta.xml
<CustomField>
    <fullName>Which_Male_Infertility_Factors__c</fullName>
    <label>Which Male Infertility Factors?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idiopathic (Unexplained)</fullName>
            </value>
            <value>
                <fullName>Genetic (Klinefelter’s)</fullName>
            </value>
            <value>
                <fullName>Genetic (Y Deletion)</fullName>
            </value>
            <value>
                <fullName>Genetic (Other)</fullName>
            </value>
            <value>
                <fullName>Testis Damage (Cancer Treatment)</fullName>
            </value>
            <value>
                <fullName>Testis Damage - Other (incl. past/recent cryptorchidism, vascular, infective,</fullName>
            </value>
            <value>
                <fullName>Gonadotrophin Deficiency</fullName>
            </value>
            <value>
                <fullName>Vasectomy</fullName>
            </value>
            <value>
                <fullName>Congenital Absence of the Vas Deferens/Cystic Fibrosis</fullName>
            </value>
            <value>
                <fullName>Obstructive Disorder (other)</fullName>
            </value>
            <value>
                <fullName>Erectile Dysfunction</fullName>
            </value>
            <value>
                <fullName>Ejaculatory Disorders (eg. Spinal Injury, Retrograde, Anejaculation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>