force-app/main/default/objects/Contact/fields/Year_pregnancy_first_attempted__c.field-meta.xml
<CustomField>
    <fullName>Year_pregnancy_first_attempted__c</fullName>
    <label>Year pregnancy first attempted</label>
    <length>4</length>
    <type>Text</type>
</CustomField>