force-app/main/default/objects/Contact/recordTypes/Donors.recordType-meta.xml
<RecordType>
    <fullName>Donors</fullName>
    <active>true</active>
    <label>Donors</label>
</RecordType>