force-app/main/default/objects/Contact/recordTypes/Patient_and_Donor.recordType-meta.xml
<RecordType>
    <fullName>Patient_and_Donor</fullName>
    <active>true</active>
    <label>Patient and Donor</label>
</RecordType>