force-app/main/default/objects/Contact/recordTypes/Patients_and_Partners.recordType-meta.xml
<RecordType>
    <fullName>Patients_and_Partners</fullName>
    <active>true</active>
    <label>Patients and Partners</label>
</RecordType>