force-app/main/default/objects/Contact/validationRules/No_spaces_or_other_charcters.validationRule-meta.xml
<ValidationRule>
    <fullName>No_spaces_or_other_charcters</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( 
	NOT(ISBLANK(Medicare_Number__c)), OR(LEN(Medicare_Number__c) &lt;&gt;10, NOT(
         ISNUMBER(Medicare_Number__c))), false
)</errorConditionFormula>
    <errorMessage>The Medicare number should not have any spaces or non-number characters and must be 11 numbers long</errorMessage>
</ValidationRule>