force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Contact_Type__c</columns>
    <columns>Age__c</columns>
    <columns>GP_Check__c</columns>
    <columns>Sex__c</columns>
    <columns>Sex_at_Birth__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Patients &amp; Donors</label>
</ListView>