force-app/main/default/objects/Contact/listViews/Height_Weight_missing.listView-meta.xml
<ListView>
    <fullName>Height_Weight_missing</fullName>
    <booleanFilter>(1 or 2 or 3 OR 4 or 5 or 6) AND 7</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Contact_Type__c</columns>
    <columns>Sex__c</columns>
    <columns>Sex_at_Birth__c</columns>
    <columns>Height__c</columns>
    <columns>Weight_kg__c</columns>
    <columns>Cycles_in_Last_12_months__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Height__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Height__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Height__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Weight_kg__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Weight_kg__c</field>
        <operation>equals</operation>
        <value>999</value>
    </filters>
    <filters>
        <field>Weight_kg__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Sex_at_Birth__c</field>
        <operation>equals</operation>
        <value>Female</value>
    </filters>
    <label>FIX - females with Height/Weight missing</label>
</ListView>