force-app/main/default/objects/Contact/listViews/Mass_Email_List.listView-meta.xml
<ListView>
    <fullName>Mass_Email_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Medicare_Number__c</columns>
    <columns>Last_Day_1__c</columns>
    <columns>Cycles_in_Last_12_months__c</columns>
    <columns>GP_Referral_Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cycles_in_Last_12_months__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>GP_Referral_Expiry_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Mass Email List</label>
</ListView>