force-app/main/default/objects/Contact/listViews/Patients_Donors_Without_medicare.listView-meta.xml
<ListView>
    <fullName>Patients_Donors_Without_medicare</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Contact_Type__c</columns>
    <columns>Age__c</columns>
    <columns>GP_Check__c</columns>
    <columns>Sex__c</columns>
    <columns>Sex_at_Birth__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Medicare_Number__c</field>
        <operation>equals</operation>
    </filters>
    <label>Patients &amp; Donors Without Medicare</label>
    <sharedTo>
        <group>Patient_Services</group>
    </sharedTo>
</ListView>