force-app/main/default/objects/Contact/listViews/Preferred.listView-meta.xml
<ListView>
    <fullName>Preferred</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Medicare_Number__c</columns>
    <columns>Last_Day_1__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Started_Trying_to_Conceive__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Medicare_Number__c</field>
        <operation>equals</operation>
    </filters>
    <label>Preferred</label>
</ListView>